# tennant-azure

./: .env  app.py  install.sh  pyproject.toml  pyproject.toml:Zone.Identifier  requirements.txt
static/: signin.js:Zone.Identifier
static/js/: button.js  signin.js
templates/: activity.html  index.html  signin.html
